--- a/css/master.css
+++ b/css/master.css
@@ -1,16 +1,30 @@
 body {
   font-family: fantasy;
+
 }
 
 .cricketer {
   background-color: antiquewhite;
   border: 1px black;
-
+  padding: 10%
 }
 
-
+.list-background {
+  background-image: url("https://upload.wikimedia.org/wikipedia/commons/b/be/Cricketfieldingpositions.jpg");
+  background-repeat: no-repeat;
+  background-size: 100%;
+  padding-bottom: 0
+}
 
 #list-of-things {
   display: inline-flex;
-  border: black 1px;
+  border: black 10px;
+}
+
+footer {
+  position:absolute;
+  bottom:0;
+  width:100%;
+  height:60px;
+  background:#6cf;
 }
