--- a/css/master.css
+++ b/css/master.css
@@ -1,24 +1,35 @@
+
+html,body {
+  height:100%;
+}
+
 body {
   font-family: fantasy;
 
 }
 
-.cricketer {
-  background-color: antiquewhite;
-  border: 1px black;
-  padding: 10%
-}
+
 
 .list-background {
   background-image: url("https://upload.wikimedia.org/wikipedia/commons/b/be/Cricketfieldingpositions.jpg");
   background-repeat: no-repeat;
   background-size: 100%;
-  padding-bottom: 0
+  padding-bottom: 0;
+  height: 70%;
 }
 
 #list-of-things {
-  display: inline-flex;
-  border: black 10px;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+
+.cricketer {
+    width: auto;
+    margin: 0.5rem 0.5rem;
+    padding: 2%;
+    background-color: antiquewhite;
+    border-radius: 3%;
 }
 
 footer {
@@ -27,4 +38,5 @@ footer {
   width:100%;
   height:60px;
   background:#6cf;
+  text-align: center;
 }
