added more css, added bowing average

--- a/css/master.css
+++ b/css/master.css
@@ -5,9 +5,22 @@ html,body {
 
 body {
   font-family: fantasy;
-
 }
 
+
+header {
+    text-align: center;
+    background-color: lightgreen;
+    width: 100%;
+}
+
+#form-outer {
+  text-align: center;
+}
+
+#matches, #runs, #conceded, #wickets {
+  width: 5%;
+}
 
 
 .list-background {
