--- a/css/master.css
+++ b/css/master.css
@@ -52,8 +52,8 @@ header {
     list-style-type: none;
 }
 
-li {
-  opacity: 50%;
+li:hover {
+  transform: scale(1:1.2);
 }
 
 .cricketer {
@@ -65,6 +65,14 @@ li {
     text-align: center;
     box-shadow: 6px 5px #325a57;
     opacity: 0.93;
+}
+
+.cricketer p {
+  margin: 0.2rem;
+}
+
+.cricketer:hover {
+
 }
 
 .cricketer img {
